// provides MessageFile
import "goby/protobuf/option_extensions.proto";

package goby.acomms.protobuf;

message DCCLConfig
{
  //  optional int32 modem_id = 1 [(description)="Unique number 1-31 to identify this node", (example)="1"];
  optional string crypto_passphrase = 2 [(description)="If given, encrypt all communications with this passphrase using AES. Omit for unencrypted communications.", (example)="twinkletoes%24"];
}

